# bro

./: .gitignore  README.md
bro-token/: Cargo.toml  README.md  rustfmt.toml
bro-token/script/: export-vars-nft.sh  export-vars-token.sh
bro-token/spells/: bro-ref-nft-spell.yaml  mint-nft.yaml  mint-token.yaml
bro-token/src/: lib.rs  main.rs
bro-token/src/wasm/: bro-token.wasm
libbro/: Cargo.toml  README.md
libbro/src/: calc.rs  hash.rs  lib.rs
miner/: README.md  package-lock.json  package.json  tsconfig.json
miner/src/: index.ts
scripts/: save-payload.js
tests/: README.md  decoded-mining-tx.json  gen-wasm-info.js  get-tx-proof.js  package-lock.json  package.json  request.js  test-prover-api.js  wasm-info.json
tests/payloads/: payload_2025-08-11T16-04-50-908Z.json  payload_2025-08-11T16-06-20-967Z.json  payload_2025-08-11T22-43-29-685Z.json  request.json  wrong-amount.json
tests/wasm/: gen-wasm-info.js
webapp/: .env  .env.example  .stylelintignore  .stylelintrc.cjs  Makefile  README.md  index.html  package-lock.json  package.json  polyfills.js  script.js  style.css  vite.config.js
webapp-turbo/: .env.example  Makefile  index.html  package-lock.json  package.json  tailwind.config.js  test.html  vite.config.js
webapp-turbo/public/: fix-utxo-ids.html
webapp-turbo/src/: App.css  App.jsx  main.jsx
webapp/js/: miner.js
webapp/lib/: app-state.js  bitcoin-api.js  bitcoin-tx.js  transaction-builder.js  wallet.js
webapp/src/: index.html  main.js  polyfills.js
webapp/tests/: bro-formula-test.js  browser-integration-test.js  production-test.js  (+6 more)
(+287 files in other folders)
