[package]
name = "bro-token"
description = "Just mint it $BRO"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = { version = "1.0.98" }
bitcoin = { version = "0.32.6" }
charms-sdk = { version = "0.7.0" }
serde = { version = "1.0", features = ["derive"] }
sha2 = { version = "0.10.8" }

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
